[package]
name = "youin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = "0.7.1"
tide = "0.16.0"
serde = { version = "1.0", features = [ "derive" ] }
async-std = { version = "1.12.0", features = [ "attributes" ] }
